fix: made header visible again and added z-index so visibility is not affected

--- a/p2-web-dev-portfolio/p2-web-dev-portfolio.css
+++ b/p2-web-dev-portfolio/p2-web-dev-portfolio.css
@@ -14,17 +14,34 @@ body {
 }
 
 header {
-  background: transparent;
-  border: none;
-  box-shadow: none;
-  padding: 20px 0;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  width: 100%;
+  position: relative;
+  background: rgba(0, 15, 35, 0.65);
+  backdrop-filter: blur(10px);
+  padding: 12px 0;
+  position: fixed; /* stays at top */
+  top: 0;
+  left: 0;
+  justify-content: center;
+  z-index: 9999;
+}
+.header-logo {
+  width: 55px;
+  height: 55px;
+  position: absolute;
+  left: 25px;
 }
 
-header h1 {
+h1 {
   color: rgba(255, 255, 255, 0.8);
   font-size: 42px;
   text-shadow: none;
+  text-align: center;
+  margin-top: 120px;
 }
 
 h1,
@@ -47,7 +64,8 @@ a {
   color: white;
 }
 nav {
-  display: none;
+  display: flex;
+  gap: 35px;
 }
 #chkToggle {
   display: none;
@@ -64,6 +82,7 @@ nav {
   margin-left: auto;
   margin-right: auto;
   justify-items: center;
+  padding-top: 95px;
 }
 
 #bio-section {
@@ -277,13 +296,26 @@ h3 {
   display: none;
 }
 
-nav {
-  display: none;
+nav a {
+  font-size: 20px;
+  color: #e8f0ff;
 }
 @media (max-width: 600px) {
   .container {
     display: block;
     width: 100%;
+  }
+
+  nav {
+    display: none;
+    flex-direction: column;
+    background: rgba(0, 15, 35, 0.85);
+    padding: 15px 0;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 70px; /* sits below the header */
+    left: 0;
   }
   nav a {
     display: block;
@@ -299,6 +331,16 @@ nav {
   }
   #lblToggle {
     display: inline-block;
+
+    position: absolute;
+    right: 25px;
+    top: 50%;
+  }
+  .header-logo {
+    display: none;
+  }
+  #chkToggle:checked ~ nav {
+    display: flex;
   }
   .box {
     padding: 15px;
